--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.kofigyan.stateprogressbar:stateprogressbar:0.0.6'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.github.florent37:diagonallayout:1.0.4'
     testCompile 'junit:junit:4.12'
 }
